# kokkos-hpx-experiments

./: CMakeLists.txt  README.md  blas_lapack.h  build_settings_daint.sh  hpx_kokkos.hpp  test_1.cpp  test_10.cpp  test_11.cpp  test_12.cpp  test_2.cpp  test_3.cpp  test_4.cpp  test_5.cpp  test_6.cpp  test_7.cpp  test_8.cpp  test_9.cpp  thread_mappings.cpp
blas_lapack/: blas1.h  blas2.h  blas3.h  lapack.h
